--- a/package.json
+++ b/package.json
@@ -17,5 +17,30 @@
   "bugs": {
     "url": "https://github.com/MaximeThoonsen/gulp-backpack/issues"
   },
+    "dependencies": {
+        "del": "^1.1.1",
+        "gulp": "^3.6.2",
+        "gulp-angular-templatecache": "^1.1.3",
+        "gulp-autoprefixer": "^2.0.0",
+        "gulp-coffee": "^1.4.3",
+        "gulp-coffeelint": "^0.4.0",
+        "gulp-concat": "^2.2.0",
+        "gulp-filesize": "0.0.6",
+        "gulp-filter": "^0.4.1",
+        "gulp-jade": "^0.5.0",
+        "gulp-less": "^1.3.9",
+        "gulp-manifest": "0.0.6",
+        "gulp-ng-annotate": "^0.3.6",
+        "gulp-plumber": "^0.6.5",
+        "gulp-rename": "^1.2.0",
+        "gulp-replace": "^0.4.0",
+        "gulp-rev": "^2.0.1",
+        "gulp-rev-collector": "^0.1.1",
+        "gulp-uglify": "^0.2.1",
+        "gulp-util": "^2.2.20",
+        "gulp-webserver": "^0.8.8",
+        "require-dir": "^0.1.0",
+        "run-sequence": "^1.0.1"
+    },
   "homepage": "https://github.com/MaximeThoonsen/gulp-backpack"
 }
