--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
     "dependencies": {
         "del": "^1.1.1",
+        "require-dir": "^0.1.0",
+        "run-sequence": "^1.0.1",
         "gulp": "^3.6.2",
         "gulp-angular-templatecache": "^1.1.3",
         "gulp-autoprefixer": "^2.0.0",
@@ -38,9 +40,7 @@
         "gulp-rev-collector": "^0.1.1",
         "gulp-uglify": "^0.2.1",
         "gulp-util": "^2.2.20",
-        "gulp-webserver": "^0.8.8",
-        "require-dir": "^0.1.0",
-        "run-sequence": "^1.0.1"
+        "gulp-webserver": "^0.8.8"
     },
   "homepage": "https://github.com/MaximeThoonsen/gulp-backpack"
 }
