--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "gulp-backpack",
-  "version": "0.1.0",
-  "description": "Collect all the classic gulp's dependencies you need in one package",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/MaximeThoonsen/gulp-backpack"
-  },
-  "keywords": [
-    "gulp"
-  ],
-  "author": "Maxime Thoonsen",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/MaximeThoonsen/gulp-backpack/issues"
-  },
+    "name": "gulp-backpack",
+    "version": "0.1.1",
+    "description": "Collect all the classic gulp's dependencies you need in one package",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/MaximeThoonsen/gulp-backpack"
+    },
+    "keywords": [
+        "gulp"
+    ],
+    "author": "Maxime Thoonsen",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/MaximeThoonsen/gulp-backpack/issues"
+    },
     "dependencies": {
+        "gulp": "^3.6.2",
         "gulp-angular-templatecache": "^1.1.3",
         "gulp-autoprefixer": "^2.0.0",
         "gulp-coffee": "^1.4.3",
@@ -37,8 +38,9 @@
         "gulp-uglify": "^0.2.1",
         "gulp-util": "^2.2.20",
         "gulp-webserver": "^0.8.8",
+        "require-dir": "^0.1.0",
         "del": "^1.1.1",
-        "require-dir": "^0.1.0"
+        "run-sequence": "^1.0.1"
     },
-  "homepage": "https://github.com/MaximeThoonsen/gulp-backpack"
+    "homepage": "https://github.com/MaximeThoonsen/gulp-backpack"
 }
