--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
     "name": "gulp-backpack",
-    "version": "0.1.2",
+    "version": "0.1.3",
     "description": "Collect all the classic gulp's dependencies you need in one package and simplify your task",
+    "main": "gulp-backpack.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "mocha --reporter spec",
+        "coveralls": "istanbul cover _mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage"
     },
     "repository": {
         "type": "git",
@@ -23,7 +25,6 @@
         "gulp-coffee": "^1.4.3",
         "gulp-coffeelint": "^0.4.0",
         "gulp-concat": "^2.2.0",
-        "gulp-filesize": "0.0.6",
         "gulp-filter": "^0.4.1",
         "gulp-jade": "^0.5.0",
         "gulp-less": "^1.3.9",
@@ -39,6 +40,21 @@
         "gulp-webserver": "^0.8.8",
         "del": "^1.1.1",
         "require-dir": "^0.1.0"
+    },
+    "devDependencies": {
+        "coveralls": "^2.7.0",
+        "graceful-fs": "^3.0.0",
+        "istanbul": "^0.3.0",
+        "jscs": "~1.11.3",
+        "jshint": "^2.5.0",
+        "jshint-stylish": "^1.0.0",
+        "marked-man": "^0.1.3",
+        "mkdirp": "^0.5.0",
+        "mocha": "^2.0.1",
+        "mocha-lcov-reporter": "^0.0.1",
+        "q": "^1.0.0",
+        "rimraf": "^2.2.5",
+        "should": "^5.0.1"
     },
     "homepage": "https://github.com/MaximeThoonsen/gulp-backpack"
 }
