fix dev dependencies

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "require-dir": "^0.1.0"
     },
     "devDependencies": {
+        "gulp": "~3.8.10",
         "coveralls": "^2.7.0",
         "graceful-fs": "^3.0.0",
         "istanbul": "^0.3.0",
